--- a/NavBarComponent/ActivitySupportService/ActiveSupportService.html
+++ b/NavBarComponent/ActivitySupportService/ActiveSupportService.html
@@ -143,22 +143,22 @@
                         <ul class="nav flex-column nav-account">
    
                            <li class="nav-item" style="background-color:wheat; border-radius: 10px;">
-                              <a class="nav-link" href="./account-home.html">
+                              <a class="nav-link" href="./ActiveSupportService.html">
                                  <span class="ms-2">장애인 활동지원사업 안내</span>
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="./account-profile.html">
+                              <a class="nav-link" href="./ActiveSupportServiceProposal.html">
                                  <span class="ms-2">장애인 활동지원사업 신청</span>
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="./account-security.html">
+                              <a class="nav-link" aria-current="page" href="./UserGrievancehandling.html">
                                  <span class="ms-2">이용자 및 활동지원사 <br>고충 처리 게시판</span>
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="./account-security.html">
+                              <a class="nav-link" aria-current="page" href="./ActiveSupportServiceBoard.html">
                                  <span class="ms-2">장애인 활동지원사업 게시판</span>
                               </a>
                            </li>
