--- a/NavBarComponent/ActivitySupportService/UserGrievancehandling.html
+++ b/NavBarComponent/ActivitySupportService/UserGrievancehandling.html
@@ -142,23 +142,23 @@
                      <div class="collapse d-md-block" id="collapseAccountMenu" style="text-align: center;">
                         <ul class="nav flex-column nav-account">
    
-                           <li class="nav-item" style="background-color:wheat; border-radius: 10px;">
-                              <a class="nav-link" href="./account-home.html">
+                           <li class="nav-item" >
+                              <a class="nav-link" href="./ActiveSupportService.html">
                                  <span class="ms-2">장애인 활동지원사업 안내</span>
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="./account-profile.html">
+                              <a class="nav-link" href="./ActiveSupportServiceProposal.html">
                                  <span class="ms-2">장애인 활동지원사업 신청</span>
                               </a>
                            </li>
-                           <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="./account-security.html">
+                           <li class="nav-item"  style="background-color:wheat; border-radius: 10px;">
+                              <a class="nav-link" aria-current="page" href="./UserGrievancehandling.html">
                                  <span class="ms-2">이용자 및 활동지원사 <br>고충 처리 게시판</span>
                               </a>
                            </li>
-                           <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="./account-security.html">
+                           <li class="nav-item" >
+                              <a class="nav-link" aria-current="page" href="./ActiveSupportServiceBoard.html">
                                  <span class="ms-2">장애인 활동지원사업 게시판</span>
                               </a>
                            </li>
@@ -170,11 +170,10 @@
                      <div class="card border-0 mb-4 shadow-sm">
                         <div class="card-body p-lg-5">
                            <div class="mb-5" style="font-size: large;">
-                              장애인 활동 사업 지원 안내
+                              이용자 및 활동지원사 고충 처리 게시판
                            </div>
                            <hr>
                            
-                        <img src="../../assets/images/custom/장애인활동지원서비스.jpeg" alt="Image" class="border rounded-3 img-fluid card-lift" />
                            <form class="row needs-validation" novalidate>
                            </form>
                         </div>
