--- a/signin.html
+++ b/signin.html
@@ -42,12 +42,9 @@
                <div class="row">
                   <div class="col-xl-4 offset-xl-4 col-md-12 col-12">
                      <div class="text-center">
-                        <a href="index.html"><img src="./assets/images/logo/brand-icon.svg" alt="brand" class="mb-3" /></a>
-                        <h1 class="mb-1">Welcome Back</h1>
-                        <p class="mb-0">
-                           Don’t have an account yet?
-                           <a href="./signup.html" class="text-primary">Register here</a>
-                        </p>
+                        <a href="index.html"><img src="./assets/images/favicon/Logo.jpg" alt="brand" class="mb-3" /></a>
+                        <h1 class="mb-1"> 로그인 </h1>
+                        <!-- <p class="mb-0">Sign up now and get free account instant.</p> -->
                      </div>
                   </div>
                </div>
@@ -63,37 +60,37 @@
                         <div class="card-body">
                            <form class="needs-validation mb-6" novalidate>
                               <div class="mb-3">
-                                 <label for="signinEmailInput" class="form-label">
-                                    Email
+                                 <label for="signinEmailInput" class="form-label" style="font-size: large;">
+                                    아이디
                                     <span class="text-danger">*</span>
                                  </label>
                                  <input type="email" class="form-control" id="signinEmailInput" required />
-                                 <div class="invalid-feedback">Please enter email.</div>
+                                 <div class="invalid-feedback"  style="font-size: large;">아이디를 입력해주세요.</div>
                               </div>
                               <div class="mb-3">
-                                 <label for="formSignUpPassword" class="form-label">Password</label>
+                                 <label for="formSignUpPassword" class="form-label"  style="font-size: large;">비밀번호</label>
                                  <div class="password-field position-relative">
                                     <input type="password" class="form-control fakePassword" id="formSignUpPassword" required />
                                     <span><i class="bi bi-eye-slash passwordToggler"></i></span>
-                                    <div class="invalid-feedback">Please enter password.</div>
+                                    <div class="invalid-feedback"  style="font-size: large;">비밀번호를 입력해주세요.</div>
                                  </div>
                               </div>
 
                               <div class="mb-4 d-flex align-items-center justify-content-between">
                                  <div class="form-check">
                                     <input class="form-check-input" type="checkbox" id="rememberMeCheckbox" />
-                                    <label class="form-check-label" for="rememberMeCheckbox">Remember me</label>
+                                    <label class="form-check-label" for="rememberMeCheckbox"  style="font-size: large;"> Email 저장하기 </label>
                                  </div>
 
-                                 <div><a href="../forget-password.html" class="text-primary">Forgot Password</a></div>
+                                 <div><a href="../forget-password.html"  style="font-size: large;"> 비밀번호 찾기</a></div>
                               </div>
 
                               <div class="d-grid">
-                                 <button class="btn btn-primary" type="submit">Sign In</button>
+                                 <button class="btn btn-primary" type="submit"> 로그인 </button>
                               </div>
                            </form>
 
-                           <span>Sign in with your social network.</span>
+                           <!-- <span>Sign in with your social network.</span>
                            <div class="d-grid mt-3">
                               <a href="#" class="btn btn-google">
                                  <span class="me-3">
@@ -115,12 +112,12 @@
                                  </span>
                                  Continue with Facebook
                               </a>
-                           </div>
+                           </div> -->
                         </div>
                      </div>
                   </div>
                </div>
-               <div class="row">
+               <!-- <div class="row">
                   <div class="col-lg-12">
                      <div class="text-center">
                         <div class="small mb-3 mb-lg-0 text-body-tertiary">
@@ -131,7 +128,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> -->
             </div>
          </section>
          <!--Sign up end-->
