--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
                <div class="row">
                   <div class="col-xl-4 offset-xl-4 col-md-12 col-12">
                      <div class="text-center">
-                        <a href="index.html"><img src="./assets/images/favicon/Logo.jpg" alt="brand" class="mb-3" /></a>
+                        <a href="index.html" ><img src="./assets/images/favicon/Logo.jpg" alt="brand" class="mb-3" /></a>
                         <h1 class="mb-1">회원 가입</h1>
                         <!-- <p class="mb-0">Sign up now and get free account instant.</p> -->
                      </div>
@@ -60,33 +60,33 @@
                         <div class="card-body">
                            <form class="needs-validation mb-6" novalidate>
                               <div class="mb-3">
-                                 <label for="signupFullnameInput" class="form-label">이름</label>
+                                 <label for="signupFullnameInput" class="form-label" style="font-size: large;">이름</label>
                                  <input type="text" class="form-control" id="signupFullnameInput" required />
-                                 <div class="invalid-feedback">이름을 입력해주세요.</div>
+                                 <div class="invalid-feedback" style="font-size: large;">이름을 입력해주세요.</div>
                               </div>
 
                               <div class="mb-3">
-                                 <label for="signupEmailInput" class="form-label">
+                                 <label for="signupEmailInput" class="form-label" style="font-size: large;">
                                     이메일
                                     <span class="text-danger">*</span>
                                  </label>
                                  <input type="email" class="form-control" id="signupEmailInput" required />
-                                 <div class="invalid-feedback">이메일을 입력해주세요.</div>
+                                 <div class="invalid-feedback" style="font-size: large;">이메일을 입력해주세요.</div>
                               </div>
                               <div class="mb-3">
-                                 <label for="formSignUpPassword" class="form-label">비밀번호</label>
+                                 <label for="formSignUpPassword" class="form-label" style="font-size: large;">비밀번호</label>
                                  <div class="password-field position-relative">
                                     <input type="password" class="form-control fakePassword" id="formSignUpPassword" required />
                                     <span><i class="bi bi-eye-slash passwordToggler"></i></span>
-                                    <div class="invalid-feedback">비밀번호를 입력해주세요.</div>
+                                    <div class="invalid-feedback" style="font-size: large;">비밀번호를 입력해주세요.</div>
                                  </div>
                               </div>
                               <div class="mb-3">
-                                 <label for="formSignUpConfirmPassword" class="form-label">비밀번호 재확인</label>
+                                 <label for="formSignUpConfirmPassword" class="form-label" style="font-size: large;">비밀번호 재확인</label>
                                  <div class="password-field position-relative">
                                     <input type="password" class="form-control fakePassword" id="formSignUpConfirmPassword" required />
                                     <span><i class="bi bi-eye-slash passwordToggler"></i></span>
-                                    <div class="invalid-feedback">올바른 비밀번호를 입력해주세요.</div>
+                                    <div class="invalid-feedback" style="font-size: large;">올바른 비밀번호를 입력해주세요.</div>
                                  </div>
                               </div>
                               <!-- <div class="mb-3">
@@ -101,7 +101,7 @@
                               </div> -->
 
                               <div class="d-grid">
-                                 <button class="btn btn-primary" type="submit">회원가입</button>
+                                 <button class="btn btn-primary" type="submit" style="font-size: large;">회원가입</button>
                               </div>
                            </form>
 
