--- a/NavBarComponent/GuidePaju/wayToCome.html
+++ b/NavBarComponent/GuidePaju/wayToCome.html
@@ -166,7 +166,7 @@
                            </li>
                            
                            <li class="nav-item"  style="background-color:wheat; border-radius: 10px;">
-                              <a class="nav-link" aria-current="page" href="./account-security.html">
+                              <a class="nav-link" aria-current="page" href="./wayToCome.html">
                                  <span class="ms-2">오시는 길</span>
                               </a>
                            </li>
