--- a/NavBarComponent/IndependentLife/IndependentLife.html
+++ b/NavBarComponent/IndependentLife/IndependentLife.html
@@ -143,20 +143,17 @@
                         <ul class="nav flex-column nav-account">
    
                            <li class="nav-item" style="background-color:wheat; border-radius: 10px;">
-                              <a class="nav-link" href="./account-home.html">
-                                 <i class="align-bottom bx bx-home"></i>
+                              <a class="nav-link" href="./IndependentLife.html">
                                  <span class="ms-2">자립생활이란?</span>
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="./account-profile.html">
-                                 <i class="align-bottom bx bx-user"></i>
+                              <a class="nav-link" href="./IndependentLifeService.html">
                                  <span class="ms-2">자립생활 서비스</span>
                               </a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="./account-security.html">
-                                 <i class="align-bottom bx bx-lock-alt"></i>
+                              <a class="nav-link" aria-current="page" href="./colleagueCounseling.html">
                                  <span class="ms-2">동료 상담</span>
                               </a>
                            </li>
@@ -172,13 +169,7 @@
                            </div>
                            <hr>
                            
-                           <form class="row needs-validation" novalidate>
-                              <div class="col-lg-7">
-                                 <div>
-                                    <button type="submit" class="btn btn-primary">수정, 업로드 - 관리자</button>
-                                 </div>
-                              </div>
-                           </form>
+
                         </div>
                      </div>
                      
