장애인 맞춤형 일자리 추가 및 경로 연결

--- a/NavBarComponent/ActivitySupportService/ActiveSupportService.html
+++ b/NavBarComponent/ActivitySupportService/ActiveSupportService.html
@@ -101,8 +101,9 @@
                            </li>                        <li class="nav-item dropdown">
                               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">장애인 맞춤형 일자리</a>
                               <ul class="dropdown-menu">
-                                 <li><a class="dropdown-item" href="./IndependentLife.html">장애인 맞춤형 일자리란?</a></li>
-                                 <li><a class="dropdown-item" href="./landing-sass-v2.html">장애인 맞춤형 일자리</a></li>
+                                 <li><a class="dropdown-item" href="../CustomizedJob/customizedJobInfo.html">장애인 맞춤형 일자리란?</a></li>
+                                 <li><a class="dropdown-item" href="../CustomizedJob/customizedJobCollectInfo.html">장애인 맞춤형 일자리 모집 안내</a></li>
+                                 <li><a class="dropdown-item" href="../CustomizedJob/customizedJobBoard.html">장애인 맞춤형 일자리 신청 게시판</a></li>
                               </ul>
                            </li>                        <li class="nav-item dropdown">
                               <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">커뮤니티</a>
