--- a/index.html
+++ b/index.html
@@ -90,24 +90,25 @@
                            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">자립생활</a>
                            <ul class="dropdown-menu">
                               <li><a class="dropdown-item" href="./NavBarComponent/IndependentLife/IndependentLife.html">자립생활이란</a></li>
-                              <li><a class="dropdown-item" href="./jarip_2.html">자립생활 서비스</a></li>
-                              <li><a class="dropdown-item" href="./jarip_3.html">동료 상담</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/IndependentLife/IndependentLifeService.html">자립생활 서비스</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/IndependentLife/colleagueCounseling.html">동료 상담</a></li>
                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">활동지원서비스</a>
                            <ul class="dropdown-menu">
                               <li><a class="dropdown-item" href="./NavBarComponent/ActivitySupportService/ActiveSupportService.html">장애인 활동지원사업 안내</a></li>
-                              <li><a class="dropdown-item" href="./landing-sass-v2.html">장애인 활동지원사업 신청</a></li>
-                              <li><a class="dropdown-item" href="./landing-accounting.html">이용자 및 활동지원사 고충처리 게시판</a></li>
-                              <li><a class="dropdown-item" href="./landing-accounting.html">장애인 활동지원사업 게시판</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/ActivitySupportService/ActiveSupportServiceProposal.html">장애인 활동지원사업 신청</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/ActivitySupportService/UserGrievancehandling.html">이용자 및 활동지원사 고충처리 게시판</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/ActivitySupportService/ActiveSupportServiceBoard.html">장애인 활동지원사업 게시판</a></li>
                            </ul>
                         </li>                        
                         <li class="nav-item dropdown">
                            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">장애인 맞춤형 일자리</a>
                            <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="./IndependentLife.html">장애인 맞춤형 일자리란?</a></li>
-                              <li><a class="dropdown-item" href="./landing-sass-v2.html">장애인 맞춤형 일자리</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/CustomizedJob/customizedJobInfo.html">장애인 맞춤형 일자리란?</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/CustomizedJob/customizedJobCollectInfo.html">장애인 맞춤형 일자리 모집 안내</a></li>
+                              <li><a class="dropdown-item" href="./NavBarComponent/CustomizedJob/customizedJobBoard.html">장애인 맞춤형 일자리 게시판</a></li>
                            </ul>
                         </li>                        
                         <li class="nav-item dropdown">
