--- a/NavBarComponent/CustomizedJob/customizedJobBoard.html
+++ b/NavBarComponent/CustomizedJob/customizedJobBoard.html
@@ -166,7 +166,7 @@
                      <div class="card border-0 mb-4 shadow-sm">
                         <div class="card-body p-lg-5">
                            <div class="mb-5" style="font-size: large;">
-                              장애인 맞춤형 일자리란?
+                              장애인 맞춤형 일자리 게시판
                            </div>
                            <hr>
                         </div>
