--- a/NavBarComponent/IndependentLife/IndependentLife.html
+++ b/NavBarComponent/IndependentLife/IndependentLife.html
@@ -166,10 +166,62 @@
                      <div class="card border-0 mb-4 shadow-sm">
                         <div class="card-body p-lg-5">
                            <div class="mb-5" style="font-size: large;">
-                              자립생활이란
+                              1. 자립생활이란
                            </div>
                            <hr>
-                           
+                           의사결정 또는 일상생활에 있어서 타인에 의존을 최소화하고 자신의 생활을 관리할 수 있는 위치에 서
+는 것으로 스스로 자기 결정권과 선택권을 가지고 지역사회에서 만족하는 삶을 살수 있도록 하는 것이다
+자립생활은 신변처리, 지역에서의 참가, 사회적 역할의 수행, 자기 결정, 신체적 및 심리적인 타인에의 의
+존을 최소화 하는 것은 자립이란 한 사람 한사람 개별적으로 정의하지 않으면 안되는 상대적 개념이다
+<br>
+<hr>
+<div class="mb-5" style="font-size: large;">
+   
+</div>
+- 자립생활 센터란
+<br>
+지역사회에서 장애인이 자립생활을 실천 할 수 있도록 동료상담, 자립생활기술훈련, 권익옹호, 정보제공,
+활동보조인 파견 사업 등과 같은 서비스를 통하여 정서적 지지와 사회환경을 바꾸며 인식 개선을 통하여
+장애인이 실질적으로 자립할 수 있도록 돕는 기관
+<br>
+* 자립생활 지원사업- 동료상담, 권익옹호, 개인별 자립지원, 탈시설 자립지원, 선택사업
+<br>
+<br>
+
+- 동료상담(Peer Counselling) 이란
+<br>
+장애로 인한 상처, 아픔 그리고 억압과 차별의 같은 경험을 가지고 있는 동료가 대등한 입장에서 대등
+한 시간을 가지고 서로의 얘기를 잘 들어주고 지지해주는 것으로 개인별 동료상담가 집단동료상담으로 진
+행되고 있다.
+<br>
+<br>
+- 권익옹호(advocacy) 란
+<br>
+ ‘권익옹호 활동’은 사회적인 환경을 조성하기 위한 장애인 당사자들의 활동 모두를 의미하는 것.
+개인적∙사회적 권리침해에 대해 지역사회에 장애인의 정책적 권력 강화 및 편견 해소하고, 차별과 학대
+를 거부하며 보호를 거부할 권리가 있으며 서비스를 선택할 권리도 있다.- 권익옹호 사업으로는 장애인식개선 교육, 교통환경모니터링, 인권문화제가 있다.
+<br>
+<br>
+ 
+- 개인별자립지원(Individualized Indepent Living Supporting)이란?
+<br>
+ 장애인의 자립생활에 필요한 주거, 금전, 교육, 직업, 문화, 여가 등을 사람중심설계(Person Centered
+ Description)의 활용으로 목적과 목표를 수립 및 실천함으로 자립생활의 의지를 고취할 수 있고 다양한
+활동의 지지와 지원에 따라 자기주도적인 자립생활을 실현할 수 있다.- 개인별 자립지원 사업으로는 개별자립지원인 자립생활 서포트 사업과 집단자립생활훈련을 진행하고 있
+다.
+<br>
+<br>
+
+- 탈시설자립지원
+<br>
+장애인 당사자의 탈시설 자립지원을 위해 거주시설과의 네트워크를 통해 자립생활에 필요한 정보제공과
+필요로 하는 기술 습득 및 일상생활의 다양한 영역별 체험을 통해 자립생활의 역량을 강화시키고 자기
+주도적인 일상을 만들어 지역사회에 자립할 수 있도록 지원한다.- 탈시설 사업으로 거주시설 장애인 탈시설 자립지원과 시설장애인 지역사회 훈련을 진행중이다.
+<br>
+<br>
+
+- 선택사업<br>
+재가 장애인여행프로그램과 건강관리 프로그램을 진행함으로 장애인의 건강한 일상을 보내기 위한 사업을 지원하고 있다.
 
                         </div>
                      </div>
